# android-ndk-swig-example

./: .gitignore  LICENSE  README.md
AS1/: build.gradle
AS1/app/: build.gradle
AS1/app/src/main/java/com/sureshjoshi/android/ndkexample/: MainActivity.java
AS1/app/src/main/jni/: SeePlusPlus.h  SeePlusPlus.i
AS1/gradle/wrapper/: gradle-wrapper.properties
AS2/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
AS2/app/src/main/: AndroidManifest.xml
AS2/app/src/main/cpp/: NDKBug.cpp  SeePlusPlus.cpp
AS2/app/src/main/java/com/sureshjoshi/android/ndkexample/: MainActivity.java
AS2/app/src/test/java/com/sureshjoshi/android/ndkexample/: ExampleUnitTest.java
AS2/gradle/wrapper/: gradle-wrapper.properties
AS3/: .gitignore  build.gradle
AS3/app/: CMakeLists.txt  build.gradle
AS3/app/src/main/: AndroidManifest.xml
AS3/app/src/main/cpp/: ISeePlusPlus.h  ISeePlusPlusInterface.h  SeePlusPlus.cpp  SeePlusPlus.h  SeePlusPlus.i
AS3/app/src/main/java/com/sureshjoshi/android/ndkexample/: MainActivity.java
AS3/app/src/main/res/layout/: activity_main.xml
AS3/app/src/main/res/values/: strings.xml
AS3/app/src/test/java/com/sureshjoshi/android/ndkexample/: ExampleUnitTest.kt  NativeUnitTest.kt
AS3/gradle/wrapper/: gradle-wrapper.properties
NDKExample/: build.gradle  gradle.properties
NDKExample/app/: build.gradle  proguard-rules.pro
NDKExample/app/src/main/: AndroidManifest.xml
NDKExample/app/src/main/java/com/sureshjoshi/android/ndkexample/: MainActivity.java
NDKExample/app/src/main/jni/: ISeePlusPlus.h
NDKExample/app/src/main/res/layout/: activity_main.xml
NDKExample/app/src/main/res/values/: strings.xml
